Added setup for async tasks.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,29 @@ services:
       - "8000:8000"
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    image: airport_python
+    environment:
+      - CELERY_BROKER=redis://redis:6379
+      - CELERY_BACKEND=redis://redis:6379
+    depends_on:
+      - redis
+
+  celery:
+    build: .
+    command: celery -A app worker -l INFO
+    volumes: 
+      - ./app:/app
+    depends_on:
+      - redis
+
+  celery-beat:
+    build: .
+    command: celery -A app beat -l INFO
+    volumes: 
+      - ./app:/app
+    depends_on:
+      - redis
+    
+  redis:
+    image: redis:6.0.9-alpine
 
