--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django>=3.1.0,<3.2.0
 pycrypto>=2.6.1,<2.7.0
 djangorestframework>=3.12.1,<3.13.0
+celery>=5.0.0,<5.1.0
+redis>=3.5.3,<3.6.0
 
 flake8>=3.8.3,<3.9.0
