--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ djangorestframework>=3.12.1,<3.13.0
 celery>=5.0.0,<5.1.0
 redis>=3.5.3,<3.6.0
 requests>=2.24.0,<2.25.0
+psycopg2>=2.8.6,<2.9.0
 
 flake8>=3.8.3,<3.9.0
