--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     image: airport_python
     environment:
       - DB_HOST=db
@@ -28,6 +30,8 @@ services:
       - POSTGRES_DB=airport
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=secretpassword
+    volumes:
+      - postgres_data:/var/lib/postresql/data/
 
   celery:
     build: .
@@ -36,6 +40,11 @@ services:
       - ./app:/app
     depends_on:
       - redis
+    environment:
+      - DB_HOST=db
+      - DB_NAME=airport
+      - DB_USER=postgres
+      - DB_PASSWORD=secretpassword
 
   celery-beat:
     build: .
@@ -48,3 +57,5 @@ services:
   redis:
     image: redis:6.0.9-alpine
 
+volumes:
+  postgres_data:
